--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,11 +1,17 @@
+body {
+    font-size: 30px;
+}
+
+
 .cardContainer {
-    height: 350px;
-    width: 350px;
+    height: 900px;
+    width: 550px;
+    background-color: blue;
     // border: 2px solid black;
 }
 
 img {
-    height:350px;
+    height:450px;
     // width: 150px; DONT NEED
     padding: 50px;
 }
