attempted to recreate carousel gallery

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -8,6 +8,6 @@
     grid-template-rows: 1fr 1fr;
     row-gap: 250px;
     
-    border: 2px solid black;
+    // border: 2px solid black;
     padding: 50px;
 }
