--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,12 +1,16 @@
 body {
     font-size: 30px;
+    color: #153243;
+    background-color: #284B63;
 }
 
 
 .cardContainer {
+    margin: 0 auto;
     height: 900px;
     width: 550px;
-    background-color: blue;
+    background-color: #EEF0EB;
+    border-radius: 50px 15px 50px 0;
     // border: 2px solid black;
 }
 
