--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,21 +1,20 @@
 body {
-    font-size: 30px;
-    color: #153243;
-    background-color: #284B63;
+  font-size: 20px;
+  color: #153243;
+  background-color: #284b63;
 }
 
-
 .cardContainer {
-    margin: 0 auto;
-    height: 900px;
-    width: 550px;
-    background-color: #EEF0EB;
-    border-radius: 50px 15px 50px 0;
-    // border: 2px solid black;
+  margin: 0 auto;
+  height: 500px;
+  width: 300px;
+  background-color: #eef0eb;
+  border-radius: 50px 15px 50px 0;
+  // border: 2px solid black;
 }
 
 img {
-    height:450px;
-    // width: 150px; DONT NEED
-    padding: 50px;
+  height: 150px;
+  // width: 150px; DONT NEED
+  padding: 50px;
 }
