--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -1,8 +1,8 @@
 label {
   padding: 40px;
-  color: antiquewhite;
+  color: aliceblue;
 }
 
 input {
-  accent-color: red;
+  accent-color: #2e86ab;
 }
