--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,17 +1,36 @@
 body {
   font-size: 20px;
-  color: #153243;
-  background-color: #284b63;
+  color: black;
+  background-color: rgb(233, 233, 233);
 }
 
 .cardContainer {
   margin: 0 auto;
-  height: 500px;
-  width: 300px;
-  background-color: #eef0eb;
-  border-radius: 50px 15px 50px 0;
-  // border: 2px solid black;
+  height: 400px;
+  width: 250px;
+  background-color: white;
+
+  border-radius: 1px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  padding: 5px;
+  text-align: center;
+
+  &__tagline {
+    font-style: italic;
+  }
+
+  &__abv {
+    font-weight: bold;
+  }
+
+  h3 {
+    font-size: 25px;
+  }
 }
+
+// .image-container
 
 img {
   height: 150px;
