--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,15 +1,6 @@
 .nav-container {
-  padding: 20px;
-  background-color: blue;
-}
-
-ul {
-  display: flex;
-  justify-content: flex-end;
-}
-
-ul > li {
-  padding: 20px;
-  list-style-type: none;
+  width: 100%;
+  padding: 50px;
   color: aliceblue;
+  background-color: rgb(0, 177, 210);
 }
