--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,39 +1,60 @@
+$brewdogColor: rgb(64, 182, 218);
+
 body {
-  font-size: 20px;
   color: black;
   background-color: rgb(233, 233, 233);
+  font-size: 20px;
 }
 
 .cardContainer {
   margin: 0 auto;
-  height: 400px;
-  width: 250px;
+  padding: 15px;
+  padding-top: 30px;
+
+  height: 300px;
+  width: 350px;
+
   background-color: white;
+
+  text-align: center;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas:
+    "a b b"
+    "a c c"
+    "a d d";
 
   border-radius: 1px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-  padding: 5px;
-  text-align: center;
 
   &__tagline {
+    grid-area: c;
     font-style: italic;
   }
 
   &__abv {
+    grid-area: d;
     font-weight: bold;
   }
 
   h3 {
+    grid-area: b;
     font-size: 25px;
+  }
+
+  &:hover {
+    border: 4px solid $brewdogColor;
+    height: 292px;
+    width: 342px;
   }
 }
 
-// .image-container
-
 img {
-  height: 150px;
-  // width: 150px; DONT NEED
+  grid-area: a;
+  height: 200px;
   padding: 50px;
 }
