--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,5 +1,6 @@
 .mainContainer {
-  margin: 50px auto;
+  margin: 0 auto;
+  padding: 70px;
 
   height: 100%;
   width: 80%;
@@ -7,9 +8,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  row-gap: 150px;
-  column-gap: 10px;
-
-  // border: 2px solid black;
-  padding: 50px;
+  row-gap: 100px;
+  column-gap: 40px;
 }
