--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -1,8 +1,29 @@
+$brewdogColor: rgb(64, 182, 218);
+
 label {
   padding: 40px;
-  color: aliceblue;
+  color: white;
+  font-size: 25px;
+
+  &:hover {
+    color: $brewdogColor;
+  }
 }
 
 input {
-  accent-color: #2e86ab;
+  accent-color: $brewdogColor;
+}
+
+.search {
+  height: 40px;
+  width: 200px;
+
+  &:hover {
+    border: 3px solid $brewdogColor;
+  }
+}
+
+.larger-checkbox {
+  height: 20px;
+  width: 20px;
 }
