--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,6 +4,8 @@ body {
   color: black;
   background-color: rgb(233, 233, 233);
   font-size: 20px;
+  font-family: "Roboto";
+  letter-spacing: 2px;
 }
 
 .cardContainer {
